@@ -9,8 +9,9 @@ from mock import Mock
 from celery import Celery
 from celery import app as _app
 from celery.app import defaults
-from celery.app.base import BaseApp, pyimplementation
+from celery.app.base import BaseApp
 from celery.loaders.base import BaseLoader
+from celery.platforms import pyimplementation
 from celery.utils.serialization import pickle
 
 from celery.tests import config
